# celery-eternal

./: .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
celery_eternal/: __init__.py
celery_eternal/test/: test_eternal.py
docs/: Makefile  conf.py  index.rst  make.bat
