[aliases]
test=pytest

[bdist_wheel]
universal=1

[coverage:run]
source = celery_eternal
omit = celery_eternal/test/*
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = celery-eternal
url = http://celery-eternal.readthedocs.io/
version = 0.1.0
license = GPL-2+
license_file = LICENSE.md
author = Leo Singer
author_email = leo.singer@ligo.org
description = Celery task subclass for jobs that should run forever
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Distributed Computing

[options]
packages = find:
install_requires =
    celery[redis] >= 4.1.0
    celery_singleton >= 0.1.1
tests_require =
    pytest >= 3.0
